// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VotesFilter should render 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gPBHgx group"
          >
            <div
              class="absolute inset-0 -mx-0.5 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
            />
            <div
              class="flex justify-center items-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render default 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gPBHgx group"
          >
            <div
              class="absolute inset-0 -mx-0.5 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
            />
            <div
              class="flex justify-center items-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="absolute z-10 py-3 mt-3 rounded-xl shadow-xl opacity-0 Dropdown__Wrapper-ocz1je-0 krLubM bg-theme-background shadow-votes-filter"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="flex flex-col items-start py-7 px-10 space-y-5 w-56 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="flex items-center space-x-3 h-5 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--all"
            >
              <input
                checked=""
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="flex items-center space-x-3 h-5 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--current"
            >
              <input
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render with current option selected 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gPBHgx group"
          >
            <div
              class="flex absolute right-0 justify-center items-center mr-1 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background"
            >
              <div
                class="w-2 h-2 rounded-full bg-theme-primary-500"
              />
            </div>
            <div
              class="absolute inset-0 -mx-0.5 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
            />
            <div
              class="flex justify-center items-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="absolute z-10 py-3 mt-3 rounded-xl shadow-xl opacity-0 Dropdown__Wrapper-ocz1je-0 krLubM bg-theme-background shadow-votes-filter"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="flex flex-col items-start py-7 px-10 space-y-5 w-56 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="flex items-center space-x-3 h-5 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--all"
            >
              <input
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="flex items-center space-x-3 h-5 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--current"
            >
              <input
                checked=""
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render with disabled current option 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gPBHgx group"
          >
            <div
              class="absolute inset-0 -mx-0.5 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
            />
            <div
              class="flex justify-center items-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="absolute z-10 py-3 mt-3 rounded-xl shadow-xl opacity-0 Dropdown__Wrapper-ocz1je-0 krLubM bg-theme-background shadow-votes-filter"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="flex flex-col items-start py-7 px-10 space-y-5 w-56 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="flex items-center space-x-3 h-5 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--all"
            >
              <input
                checked=""
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="flex items-center space-x-3 h-5 rounded-md text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="VotesFilter__option--current"
            >
              <input
                class="Checkbox-sc-17gwqiq-0 gDXYgb"
                color="success"
                disabled=""
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
